--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "karma-jasmine": "~5.1.0",
     "karma-jasmine-html-reporter": "~2.0.0",
     "normalize-scss": "^7.0.1",
+    "swiper": "^8.4.3",
     "typescript": "~4.7.2"
   }
 }
