--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "flamingo3",
-  "version": "0.174",
+  "version": "0.178",
   "scripts": {
     "ng": "ng",
     "start": "ng serve",
@@ -20,6 +20,7 @@
     "@angular/platform-browser": "^14.1.0",
     "@angular/platform-browser-dynamic": "^14.1.0",
     "@angular/router": "^14.1.0",
+    "@ngrx/effects": "^14.3.2",
     "@ngrx/store": "14.3.2",
     "rxjs": "~7.5.0",
     "tslib": "^2.3.0",
